Fix layout problem with nav for mobile devices

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -30,7 +30,6 @@ body {
 
     display: grid;
     grid-template-columns: auto 1fr;
-    grid-template-rows: 1fr auto;
     min-height: 100vh;
 }
 
@@ -40,8 +39,6 @@ nav {
     border-right: 1px solid var(--outline-color);
     text-align: left;
     padding: 1.5rem 2rem;
-
-    grid-area: 1 / 1 / 3 / 2;
 
     transition: var(--default-transition);
 }
@@ -118,7 +115,6 @@ nav.hidden #shrink-nav-button svg { transform: rotate(180deg); }
 
 footer {
     height: 50px;
-    margin: 0 2rem;
     background-color: var(--muted-bg-color);
 
     display: flex;
@@ -141,7 +137,13 @@ footer svg:hover {
 }
 
 /* article styles */
-article { padding: 8rem 15% 1rem 15%; }
+article { 
+    padding: 8rem 15% 0 15%; 
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
 #home-heading { font-size: clamp(2rem, 5vw, 3rem); }
 
@@ -150,21 +152,20 @@ article { padding: 8rem 15% 1rem 15%; }
 /* mobile user styles */
 @media only screen and (max-width: 900px) {
     body {
-        min-height: calc(100vh - 50px);
+        min-height: 100vh;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr auto;
     }
+
+    article { margin-bottom: 50px; }
 
     nav {
         height: 50px;
         width: 100%;
-        
+
         position: fixed;
         bottom: 0;
     }
 
     #shrink-nav-button { display: none; }
     #nav-header-profile { display: none; }
-
-    footer { grid-area: 2 / 1 / 3 / 2; }
 }
